@@ -18,14 +18,13 @@ package ch.ivyteam.ivy.maven.test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
-import java.util.Arrays;
+import java.nio.file.Path;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
@@ -44,16 +43,16 @@ import ch.ivyteam.ivy.maven.util.CompilerResult;
 import ch.ivyteam.ivy.maven.util.SharedFile;
 
 public class TestSetupIvyTestPropertiesMojo extends BaseEngineProjectMojoTest {
+
   @Test
   public void engineClasspathIsSharedAsProperty() throws Exception {
-    SetupIvyTestPropertiesMojo mojo = rule.getMojo();
+    var mojo = rule.getMojo();
     assertThat(getProperty(Property.IVY_ENGINE_CLASSPATH))
             .as("used classpath has not been evaluated.")
             .isNullOrEmpty();
     assertThat(getProperty(Property.MAVEN_TEST_ARGLINE)).isNullOrEmpty();
 
     mojo.execute();
-
     assertThat(getProperty(Property.IVY_ENGINE_CLASSPATH))
             .as("used classpath must be shared as property so that other mojos can access it")
             .isNotEmpty();
@@ -61,11 +60,10 @@ public class TestSetupIvyTestPropertiesMojo extends BaseEngineProjectMojoTest {
 
   @Test
   public void engineModuleHintsSharedAsProperty() throws Exception {
-    SetupIvyTestPropertiesMojo mojo = rule.getMojo();
+    var mojo = rule.getMojo();
     assertThat(getProperty(Property.MAVEN_TEST_ARGLINE)).isNullOrEmpty();
 
     mojo.execute();
-
     assertThat(getProperty(Property.MAVEN_TEST_ARGLINE)).contains(" --add-opens=");
   }
 
@@ -79,7 +77,7 @@ public class TestSetupIvyTestPropertiesMojo extends BaseEngineProjectMojoTest {
 
     MavenProject project = rule.getMojo().project;
     assertThat(project.getBuild().getTestOutputDirectory())
-            .isEqualTo(new File(project.getBasedir(), "classes-test").getAbsolutePath());
+            .isEqualTo(project.getBasedir().toPath().resolve("classes-test").toAbsolutePath().toString());
     assertThat(project.getProperties().get(Property.MAVEN_TEST_ADDITIONAL_CLASSPATH))
             .isEqualTo("${" + Property.IVY_TEST_VM_RUNTIME + "},"
                     + "${" + Property.IVY_ENGINE_CLASSPATH + "},"
@@ -93,22 +91,21 @@ public class TestSetupIvyTestPropertiesMojo extends BaseEngineProjectMojoTest {
     MavenProject project = rule.getMojo().project;
     String vmRtEntry = project.getProperties().getProperty(Property.IVY_TEST_VM_RUNTIME);
     Properties props = new Properties();
-    try (
-            URLClassLoader loader = new URLClassLoader(new URL[] {new File(vmRtEntry).toURI().toURL()}, null);
-            InputStream is = loader.getResourceAsStream(IvyTestRuntime.RUNTIME_PROPS_RESOURCE)) {
+    try (var loader = new URLClassLoader(new URL[] { Path.of(vmRtEntry).toUri().toURL()}, null);
+         var is = loader.getResourceAsStream(IvyTestRuntime.RUNTIME_PROPS_RESOURCE)) {
       props.load(is);
     }
     assertThat(props.getProperty(Key.PRODUCT_DIR)).isNotEmpty();
     assertThat(props.getProperty(Key.PROJECT_LOCATIONS))
-            .isEqualTo("<" + rule.getMojo().project.getBasedir().toURI() + ">");
+            .isEqualTo("<" + rule.getMojo().project.getBasedir().toPath().toUri() + ">");
   }
 
   @Test
   public void ivyTestRuntimeIO() throws IOException {
-    IvyTestRuntime rt = new IvyTestRuntime();
-    rt.setProductDir(new File("/tmp/myEngine"));
-    File ivyTestVm = rt.store(rule.project);
-    assertThat(ivyTestVm.getParentFile().getName()).isEqualTo("target");
+    var rt = new IvyTestRuntime();
+    rt.setProductDir(Path.of("/tmp/myEngine"));
+    var ivyTestVm = rt.store(rule.project);
+    assertThat(ivyTestVm.getParent().getFileName().toString()).isEqualTo("target");
   }
 
   @Rule
@@ -127,10 +124,10 @@ public class TestSetupIvyTestPropertiesMojo extends BaseEngineProjectMojoTest {
     }
 
     private void writeTestClasspathJar() throws IOException {
-      File classPathJar = new SharedFile(getMojo().project).getEngineClasspathJar();
-      new ClasspathJar(classPathJar).createFileEntries(Arrays.asList(
-              Files.createTempFile("dummy", ".jar").toFile(),
-              Files.createTempFile("dummy2", ".jar").toFile()));
+      var classPathJar = new SharedFile(getMojo().project).getEngineClasspathJar();
+      new ClasspathJar(classPathJar).createFileEntries(List.of(
+              Files.createTempFile("dummy", ".jar"),
+              Files.createTempFile("dummy2", ".jar")));
     }
 
     private void writeTestCompileResult() throws IOException {
